
syntax = "proto3";

option go_package = "token_manager/token_manager";

package token_manager;

// Interface exported by the server.
service TokenManager {
    rpc WriteToken(WriteRequest) returns (Partial) {}

    rpc ReadToken(Id) returns (Final) {}
}

message Id {
    string id = 1;    
}

message WriteRequest {
    string id = 1;
    string name = 2;
    uint64 low = 3;
    uint64 high = 4;
    uint64 mid = 5;
}

message Partial {
    uint64 value = 1;    
}

message Final {
    uint64 value = 1;    
}

